--- a/index.html
+++ b/index.html
@@ -24,40 +24,7 @@
         <![endif]-->
     
         <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.2/zepto.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/luminateExtend/1.6.0/luminateExtend.min.js"></script>
-        <script>
-$(function() {
-  luminateExtend.init({
-    apiKey: 'CMHkey13', 
-    path: {
-      nonsecure: 'http://secure2.convio.net/tcmh/site/',
-      secure: 'https://secure2.convio.net/tcmh/site/'
-    }
-  });
-
-  var myLoginTestCallback = function(data) {
-    console.log('here');
-    console.log(data);
-  };
-
-  setTimeout(function() {
-    luminateExtend.api.request({
-      api: 'cons', 
-      callback: {
-        success: myLoginTestCallback,
-        error: myLoginTestCallback
-      },
-      data: 'method=create&add_group_ids=50003&first_name=test&last_name=test&primary_email=test@test.com',
-      requestType: 'POST',
-      useHTTPS: true
-    });
-
-  }, 1000);
-
-});
-
-        </script>
-
+        <script src="//cdnjs.cloudflare.com/ajax/libs/luminateExtend/1.6.0/luminateExtend.min.js"></script>
     </head>
     <body>
         <header>
@@ -83,18 +50,20 @@ $(function() {
 		<div class="three-fourth">
 			<p>Provide us your email and contribution level and we'll send you an email when registration is open to the public. Thanks for you interest in KC Cares Walk!</p>
 			<br>
-			<form action="" class="form">
+			<form action="" class="form" id="pre-register-form">
+        <input type="hidden" name="add_group_ids" value="50003" />
+        <input type="hidden" name="method" value="create" />
 				<div class="row clearfix">
 					<div class="half">
 						<div class="field-group">
 							<label>First Name</label>
-							<input type="text" placeholder="John">
+							<input type="text" placeholder="John" name="first_name" required>
 						</div><!-- /field -->
 					</div><!-- /half -->
 					<div class="half">
 						<div class="field-group">
 							<label>Last Name</label>
-							<input type="text" placeholder="Smith">
+							<input type="text" placeholder="Smith" name="last_name" required>
 						</div><!-- /field -->
 					</div><!-- /half -->
 				</div><!-- /row -->
@@ -107,7 +76,7 @@ $(function() {
 				</div><!-- control -->
 				<div class="field-group">
 					<label>Email Address</label>
-					<input type="text" placeholder="you@awesome.com">
+					<input type="email" placeholder="you@awesome.com" name="primary_email" required>
 				</div><!-- /field -->
 				<div class="actions">
 					<input type="submit" class="disabled" value="Pre Register">
@@ -173,6 +142,7 @@ $(function() {
         <script>window.jQuery || document.write('<script src="js/libs/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/common.js"></script>
+        <script src="js/register.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
         <script>
