--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
           <script type="text/javascript" src="/js/libs/selectivizr-1.0.2.min.js"></script>
         <![endif]-->
     
-        <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.2/zepto.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/luminateExtend/1.6.0/luminateExtend.min.js"></script>
     </head>
     <body>
         <header>
@@ -50,20 +48,18 @@
 		<div class="three-fourth">
 			<p>Provide us your email and contribution level and we'll send you an email when registration is open to the public. Thanks for your interest in KCares for Kids Walk!</p>
 			<br>
-			<form action="" class="form" id="pre-register-form">
-        <input type="hidden" name="add_group_ids" value="50003" />
-        <input type="hidden" name="method" value="create" />
+			<form action="" class="form">
 				<div class="row clearfix">
 					<div class="half">
 						<div class="field-group">
 							<label>First Name</label>
-							<input type="text" placeholder="John" name="first_name" required>
+							<input type="text" placeholder="John">
 						</div><!-- /field -->
 					</div><!-- /half -->
 					<div class="half">
 						<div class="field-group">
 							<label>Last Name</label>
-							<input type="text" placeholder="Smith" name="last_name" required>
+							<input type="text" placeholder="Smith">
 						</div><!-- /field -->
 					</div><!-- /half -->
 				</div><!-- /row -->
@@ -76,7 +72,7 @@
 				</div><!-- control -->
 				<div class="field-group">
 					<label>Email Address</label>
-					<input type="email" placeholder="you@awesome.com" name="primary_email" required>
+					<input type="text" placeholder="you@awesome.com">
 				</div><!-- /field -->
 				<div class="actions">
 					<input type="submit" class="disabled" value="Pre Register">
@@ -101,26 +97,28 @@
 </section>    <section class="row row-light clearfix sponsors">
 	<div class="w">
 		<h2>Sponsorship Levels</h2>
-		<ul class="sponsor-levels clearfix">
-			<li>Hero sponsor<br><span>$10,000</span></li>
-			<li>Champion sponsor<br><span>$5,000</span></li>
-			<li>Hope sponsor<br><span>$2,500</span></li>
-			<li>Brave sponsor<br><span>$1,000</span></li>
-			<li>Advocate<br><span>$500</span></li>
-			<li>In-Kind Donations<br><span>Goods &amp; Services</span></li>
-		</ul>
+		<table>
+			<th>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</th>
+		</table>
 		<br>
 		<a class="btn btn-primary" href="#">Become a sponsor</a>
 	</div><!-- /wrap -->
 </section>    <section class="row row-dark mission">
 	<div class="w clearfix">
 		<div class="half">
-			<h2>Walk Mission</h2>
+			<h2>About the walk</h2>
 			<p>To support the needs of children with cancer and blood disorders, as well as their families, at Children’s Mercy Hospital through pediatric cancer research and current patient needs.</p>		
 		</div><!-- /half -->
 		<div class="half">
-			<h2>Cancer Center Mission</h2>
-			<p>Children’s Mercy Cancer Center’s goal is to raise awareness and funds to improve the physical and emotional well-being of our local cancer and blood disorder patients. They provide financial and volunteer support to address the needs of children with cancer and blood disorders and their families at Children’s Mercy Hospital. This includes psychosocial support, research, education, and quality of care.</p>
+			<h2>Cancer Center Auxiliary</h2>
+			<p>Our goal is to raise awareness and funds to improve the physical and emotional well-being of our local cancer and blood disorder patients. They provide financial and volunteer support to address the needs of children with cancer and blood disorders and their families at Children’s Mercy Hospital. This includes psychosocial support, research, education, and quality of care.</p>
 		</div><!-- /half -->
 	</div><!-- /wrap -->
 </section>    <section class="row row-light contact">
@@ -142,7 +140,6 @@
         <script>window.jQuery || document.write('<script src="js/libs/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/common.js"></script>
-        <script src="js/register.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
         <script>
