--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="three-fourth">
 			<p>Provide us your email and contribution level and we'll send you an email when registration is open to the public. Thanks for your interest in KCares for Kids Walk!</p>
 			<br>
-			<form action="" id="pre-register-form" class="form">
+			<form action="#" id="pre-register-form" class="form">
 				<input type="hidden" name="add_group_ids" value="50003" />
 +        		<input type="hidden" name="method" value="create" />
 				<div class="row clearfix">
@@ -80,7 +80,7 @@
 					<input type="email" placeholder="you@awesome.com" name="primary_email" required>
 				</div><!-- /field -->
 				<div class="actions">
-					<input type="submit" class="disabled" value="Pre Register">
+					<input type="submit" value="Pre Register">
 				</div><!--  -->
 			</form>
 		</div><!-- /3/4 -->
