add social media

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
 	</div><!-- /wrap -->
 </section>
         <footer>
-            <!--<ul class="social">
-                <li><a class="i-facebook-circle" href="#"></a></li>
-                <li><a class="i-twitter-circle" href="#"></a></li>
-            </ul> /social -->
+            <ul class="social">
+                <li><a class="i-facebook-circle" href="http://facebook.com/kcareskidswalk"></a></li>
+                <li><a class="i-twitter-circle" href="http://twitter.com/kcaresforkids"></a></li>
+            </ul><!-- /social -->
             <a class="wedidit" href="http://cremalab.com">Experience by <img src="images/cremalab_logo_h.svg" alt="Cremalab"></a>
         </footer>
 
